src/objects/Utility_Account_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Utility Account Logs</relationshipLabel>
        <relationshipName>Utility_Account_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the UAL address info was different from the most recent UDR address info.</description>
        <inlineHelpText>Checked if the UAL address info was different from the most recent UDR address info.</inlineHelpText>
        <label>Address Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Cost_of_Electricity__c</fullName>
        <description>This is used for the SREC CS Product sizing. It is the total dollar amount a customer spends annually on their electric utility bill for this account. It is initially filled in with an estimate from the customer/partner during the CS application process, then filled in by Ops with the QCed amount.</description>
        <inlineHelpText>Used for SREC CS Product sizing. It&apos;s the total dollar amount spent annually on the electric utility bill. It is initially filled in with an estimate from the customer/partner during the CS application process, then filled in by Ops with the QCed amount.</inlineHelpText>
        <label>Annual Cost of Electricity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_kWh__c</fullName>
        <description>Value from most recent UDR. 
Used for customer sizing on SMART contracts.</description>
        <inlineHelpText>Value from most recent UDR.
Used for customer sizing on SMART contracts.</inlineHelpText>
        <label>Annual kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_NMC_Alloaction_kWh__c</fullName>
        <formula>calculated_subscription_size_kw_dc__c *  Opportunity__r.Shared_System_Yield_kWh_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unrounded NMC Allocation (kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_QC_Reject_Reason__c</fullName>
        <description>If UAL went through Auto-QC, indicates when auto-QC was run and why auto-QC failed</description>
        <inlineHelpText>If UAL went through Auto-QC, indicates when auto-QC was run and why auto-QC failed</inlineHelpText>
        <label>Auto QC Reject Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Demand__c</fullName>
        <description>Value from most recent UDR.</description>
        <inlineHelpText>Value from most recent UDR.</inlineHelpText>
        <label>Average Demand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Subscription_KW_DC_Rounded__c</fullName>
        <formula>ROUND( calculated_subscription_size_kw_dc__c * 2 , 0 ) / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Subscription (KW DC) Rounded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleaned_Utility_Account_Number__c</fullName>
        <inlineHelpText>Utility Account Number stripped of leading 0&apos;s and dashes, used for duplicate matching</inlineHelpText>
        <label>Cleaned Utility Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_About_Sizings__c</fullName>
        <inlineHelpText>From webform: Is there anything else that you would like to mention that may impact your annual cost of electricity over the next year?</inlineHelpText>
        <label>Comments About Sizing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_not_yet_Allocated__c</fullName>
        <label>Cost not yet Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_Online_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Online Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Subscription_KW_DC__c</fullName>
        <formula>IF(  calculated_subscription_size_kw_dc__c &gt;=  Max_Capacity_of_System__c , Max_Capacity_of_System__c,  ROUND( calculated_subscription_size_kw_dc__c * 2 , 0 ) / 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Subscription (KW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Utility_Account_Cancelled__c</fullName>
        <inlineHelpText>Triggers all related UAS&apos;s to go to Inactive; Creates Partner Support case to fill capacity</inlineHelpText>
        <label>Date Utility Account Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_LIfetime_Savings__c</fullName>
        <description>Annual cost 80% (accounts for degradation and undersizing) * 10% Savings  * 20 Years</description>
        <formula>Annual_Cost_of_Electricity__c *0.8*0.1*20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual cost 80% (accounts for degradation and undersizing) * 10% Savings  * 20 Years</inlineHelpText>
        <label>Estimated LIfetime Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Date_UAS_Removed_From_Project__c</fullName>
        <inlineHelpText>Finds the latest Date Removed From Project across UASes. Doesn&apos;t mean that all UASes have been removed.</inlineHelpText>
        <label>Last Date UAS Removed From Project</label>
        <summarizedField>Utility_Account_Subscription__c.Date_Removed_from_Project__c</summarizedField>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Utility Account Logs</relationshipLabel>
        <relationshipName>Utility_Account_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Capacity_of_System__c</fullName>
        <formula>Opportunity__r.Shared_Solar_System__r.Assemblage_Count__c * 25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Capacity of System</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Copies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Copies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NYPA__c</fullName>
        <description>Checked during QC for National Grid NY if an account is NYPA.</description>
        <label>NYPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_on_Account__c</fullName>
        <label>Name on Utility Account</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Cancelled_OR_Enacted_Removed_UAS__c</fullName>
        <label>Num Cancelled OR Enacted: Removed UAS</label>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Next_Schedule_Z_Status__c</field>
            <operation>equals</operation>
            <value>Inactive Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_UDRPs_Annual_kWh__c</fullName>
        <label>Number of UDRPs used in Annual kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_UDRPs_Avg_Demand__c</fullName>
        <label>Number of UDRPs used in Average Demand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_Cancelled_UASes__c</fullName>
        <label>Number of Non-Cancelled UASes</label>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Current_Schedule_Z_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Removed_UASes__c</fullName>
        <inlineHelpText>Count of UASes that have a Allocation Schedule Subscription and a Date Removed From Project, used by the cancellation process to update the Property Account when all projects have been removed.</inlineHelpText>
        <label>Number of Removed UASes</label>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Total_Count_of_Schedule_Zs__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Date_Removed_from_Project__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Subscribed_UASes__c</fullName>
        <inlineHelpText>Count of UASes that have a Allocation Schedule Subscription, used by the cancellation process to update the Property Account when removed from all projects</inlineHelpText>
        <label>Number of Subscribed UASes</label>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Total_Count_of_Schedule_Zs__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Utility Account Logs</relationshipLabel>
        <relationshipName>Utility_Account_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <inlineHelpText>Xcel (MN) Requirement, also used in NYSEG/EGE. This number is premise specific, they do not change/move with a customer.</inlineHelpText>
        <label>Premise/PoD ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_BW_CL_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From CS Application. To see if they have applied for a BW Solar Loan Before.</description>
        <inlineHelpText>From CS Application. To see if they have applied for a BW Solar Loan Before.</inlineHelpText>
        <label>Previous BW CL Applicant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Name_on_Utility_Account__c</fullName>
        <label>Previous Name on Utility Account</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Service_Address__c</fullName>
        <label>Previous Service Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Service_City__c</fullName>
        <label>Previous Service City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Service_State__c</fullName>
        <label>Previous Service State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Service_Zip_Code__c</fullName>
        <label>Previous Service Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Tariff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Tariff</label>
        <referenceTo>Product_Tariff__c</referenceTo>
        <relationshipLabel>Utility Account Logs</relationshipLabel>
        <relationshipName>Utility_Account_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_kWh__c</fullName>
        <description>Is equal to Annual kWh * ual.Tariff.Sizing_Ratio</description>
        <inlineHelpText>Used to size customer&apos;s subscriptions by kWh, is based on Annual kWh * Sizing Ratio. Should be value used when re-sizing customers</inlineHelpText>
        <label>Proposed kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QC_Status__c</fullName>
        <description>Status of Utility Data Request for automated data collection (e.g. EDI) on this Utility Account</description>
        <inlineHelpText>Status of Utility Data Request for automated data collection (e.g. EDI) on this Utility Account</inlineHelpText>
        <label>QC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Utility Data</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Pending BW Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RNY__c</fullName>
        <description>Checked during QC for National Grid NY if an account is RNY.</description>
        <label>RNY</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Same_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Address_Formula__c</fullName>
        <formula>Account__r.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Address (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address__c</fullName>
        <label>Service Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Apt_Suit_Formula__c</fullName>
        <formula>Account__r.Apt_Suite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Apt/Suit (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Apt_Suite__c</fullName>
        <label>Service Apt/Suite</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_City_Formula__c</fullName>
        <formula>Account__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service City (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_City__c</fullName>
        <label>Service City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State_Formula__c</fullName>
        <formula>Account__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service State (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <label>Service State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Zip_Code_Formula__c</fullName>
        <formula>Account__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Zip Code (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Zip_Code__c</fullName>
        <label>Service Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_System_Size_kW_DC__c</fullName>
        <description>From CS Application. If they have a solar system, what size is it.</description>
        <inlineHelpText>From CS Application. If they have a solar system, what size is it.</inlineHelpText>
        <label>Solar System Size(kW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subsc_Annual_Cost_of_Electricity_Rollup__c</fullName>
        <description>Used for SREC CS Product sizing. It&apos;s the sum of the Future Annual Cost of Electricity (rollup) field on all related Utility Account Subscriptions.</description>
        <inlineHelpText>Used for SREC CS Product sizing. It&apos;s the sum of the Future Annual Cost of Electricity (rollup) field on all related Utility Account Subscriptions.</inlineHelpText>
        <label>Subscribed Annual Cost of Electricity</label>
        <summarizedField>Utility_Account_Subscription__c.Annual_Cost_Future_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Next_Schedule_Z_Status__c</field>
            <operation>equals</operation>
            <value>Active Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscribed_Annual_Cost_of_Electricity__c</fullName>
        <description>Used for SREC CS Product sizing. It&apos;s the sum of the Annual Cost of Electricity (future) field on all related Utility Account Subscriptions.</description>
        <inlineHelpText>Used for SREC CS Product sizing. It&apos;s the sum of the Annual Cost of Electricity (future) field on all related Utility Account Subscriptions.</inlineHelpText>
        <label>xxSubscribed Annual Cost of Electricity</label>
        <summarizedField>Utility_Account_Subscription__c.Subscribed_Annual_Cost_of_Electricity__c</summarizedField>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Next_Schedule_Z_Status__c</field>
            <operation>equals</operation>
            <value>Active Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscribed_Annual_kWhs_Rollup__c</fullName>
        <description>This sums the Future kWh subscription fields from all related utility account subscriptions.</description>
        <inlineHelpText>This sums the Future kWh subscription fields from all related utility account subscriptions.</inlineHelpText>
        <label>Subscribed Annual kWhs</label>
        <summarizedField>Utility_Account_Subscription__c.Annual_kWh_Subscription_Future_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Next_Schedule_Z_Status__c</field>
            <operation>equals</operation>
            <value>Active Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscribed_Annual_kWhs__c</fullName>
        <description>This sums the Future kWh subscription fields from all related utility account subscriptions.</description>
        <inlineHelpText>This sums the Future kWh subscription fields from all related utility account subscriptions.</inlineHelpText>
        <label>xxSubscribed Annual kWhs</label>
        <summarizedField>Utility_Account_Subscription__c.Annual_kwh_subscription_future__c</summarizedField>
        <summaryFilterItems>
            <field>Utility_Account_Subscription__c.Next_Schedule_Z_Status__c</field>
            <operation>equals</operation>
            <value>Active Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UAS_Count__c</fullName>
        <label>UAS Count</label>
        <summaryForeignKey>Utility_Account_Subscription__c.Utility_Account_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Acct_Number_no_dashes__c</fullName>
        <description>This is a formula field that removes the dashes from a UAL name. It is used in the allocation schedule conga document for NYSEG.</description>
        <formula>SUBSTITUTE(Name,&quot;-&quot;,&quot;&quot;)</formula>
        <inlineHelpText>This is a formula field that removes the dashes from a UAL name. It is used in the allocation schedule conga document for NYSEG.</inlineHelpText>
        <label>Utility Acct Number (no dashes)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_NMC_Tariff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility NMC Tariff</label>
        <referenceTo>Utility_NMC_Tariff__c</referenceTo>
        <relationshipLabel>Utility Account Logs</relationshipLabel>
        <relationshipName>Utility_Account_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Rate_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is populated by sales/operations. It is the utility rate class that a specific utility account has.</description>
        <inlineHelpText>Automatically populated for EDI-enabled utilities if related UDRP records have a Rate Class/Subclass matching a Rate Class record. Otherwise, manually populated by sales/ops from the Utility Bill and changed through the &quot;Recalculate Subscriptions&quot; button.</inlineHelpText>
        <label>Rate Class</label>
        <referenceTo>Rate_Class__c</referenceTo>
        <relationshipLabel>Utility Account Logs</relationshipLabel>
        <relationshipName>Utility_Account_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <formula>Lead__r.Electricity_Provider__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxxUtility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility</label>
        <referenceTo>Utility__c</referenceTo>
        <relationshipLabel>Utility Account Logs</relationshipLabel>
        <relationshipName>Utility_Account_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>calculated_subscription_size_kw_dc__c</fullName>
        <formula>( Annual_Cost_of_Electricity__c /   Opportunity__r.NMC_Tariff__r.Value_of_Net_Metering_Credit__c  )/ Opportunity__r.Shared_System_Yield_kWh_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Subscription Size (kW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Utility Account Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Utility__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Utility Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Account Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>Guest_User_Access__c</fullName>
        <label>Guest User Access</label>
    </sharingReasons>
</CustomObject>